:bug: Fix disappearing cart circle on mobile

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -101,12 +101,10 @@
   }
 }
 
-.cartBox:hover .cartButton {
-  background-color: white;
-  color: white;
-  @include mediaQuery(mobile) {
-    background-color: black;
-    color: color(green);
+@media(min-width: 751px) {
+  .cartBox:hover .cartButton {
+    background-color: white;
+    color: white;
   }
 }
 
